--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html ng-app="MadLibs">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <meta charset="utf-8">
     <title>Angular MadLibs</title>
   </head>
-  <body ng-controller="madlibsController as ml" my-enter="ml.submit()" ng-cloak>
+  <body ng-controller="madlibsController as ml" ml-press-enter="ml.submit()" ng-cloak>
     <h1>MadLibs Generator</h1>
     <p>MadLibs are a little like a choose-your-own-adventure story, where you choose the nouns, verbs, adverbs and adjectives that will be used in the story, without knowing the context in which they'll be used. Try putting your own words in below (four per type of word, separated by commas but NO SPACES), choose a story for them to be plugged into, and hit submit! </p>
     <div id="word-input">
@@ -14,21 +15,21 @@
       Adjectives: <input type="text" name="adjectives" ng-model="ml.userWords.adjectives">
       Adverbs: <input type="text" name="adverbs" ng-model="ml.userWords.adverbs">
     </div>
-    <div>
-      Christmas Tree <input type="radio" name="christmas-tree" value="christmas-tree" ng-model="ml.selected">
-      Shopping <input type="radio" name="shopping" value="shopping" ng-model="ml.selected">
-      Brainstorm <input type="radio" name="brainstorm" value="brainstorming" ng-model="ml.selected">
+    <div id="select-story">
+      Christmas Tree <input type="radio" name="christmas-tree" value="christmas-tree" ng-model="ml.selected" ng-click="ml.submitted && ml.submit()">
+      Shopping <input type="radio" name="shopping" value="shopping" ng-model="ml.selected" ng-click="ml.submitted && ml.submit()">
+      Brainstorm <input type="radio" name="brainstorm" value="brainstorming" ng-model="ml.selected" ng-click="ml.submitted && ml.submit()">
     </div>
     <button id="submit" ng-click="ml.submit()">SUBMIT</button>
     <div id="story-display" ng-cloak>
       <p ng-show="ml.selected === 'christmas-tree' && ml.submitted">Every Christmas we {{ml.final.verbs[0]}} to a {{ml.final.adjectives[0]}}   tree farm far away. This is not just any {{ml.final.adjectives[1]}}   tree farm. My dad and I {{ml.final.verbs[1]}} onto the {{ml.final.nouns[0]}} to {{ml.final.verbs[2]}} for the perfect {{ml.final.nouns[1]}}.  Some people like them {{ml.final.adjectives[2]}}, but I prefer them {{ml.final.adjectives[3]}}. After  searching for hours I usually {{ml.final.adverbs[0]}} exclaim "Dad! The perfect tree is over there!" Off we {{ml.final.verbs[3]}} to get the tree. The problem is we always forget the {{ml.final.nouns[2]}} and the {{ml.final.nouns[3]}}. But at the end of the day we {{ml.final.adverbs[1]}} get the tree and head home {{ml.final.adverbs[2]}}. "I wish it was Christmas all year round,"  I {{ml.final.adverbs[3]}} think to myself.</p>
-      <p ng-show="ml.selected === 'shopping' && ml.submitted">Today I went shopping. When I arrived at the store I saw a {{ml.final.adjectives[0]}} {{ml.final.nouns[0]}}, who upon noticing me {{ml.final.adverbs[0]}} said "I need to {{ml.final.verbs[0]}}". "Well, that was   {{ml.final.adjectives[1]}}  " I thought to myself and walked in the store. The store had rearranged its inventory, so I felt    {{ml.final.adverbs[1]}}   lost. I   walked up to store clerk and said {{ml.final.adverbs[2]}}, "I am looking for a {{ml.final.adjectives[2]}} {{ml.final.nouns[1]}} that doesn’t {{ml.final.verbs[1]}} as often as the last one I had." The store clerk looked at me with a {{ml.final.adjectives[3]}} look in his eye and said, "What you are looking for can be found by the {{ml.final.nouns[2]}}, if you see a {{ml.final.nouns[3]}} that {{ml.final.adverbs[3]}} can {{ml.final.verbs[2]}}, then you've gone too far." As I tried to understand his directions, I thought to myself, "I should have just ordered it on amazon.com, Their products seem to {{ml.final.verbs[3]}} the perfect amount"</p>
+      <p ng-show="ml.selected === 'shopping' && ml.submitted">Today I went shopping. When I arrived at the store I saw a {{ml.final.adjectives[0]}} {{ml.final.nouns[0]}}, who upon noticing me {{ml.final.adverbs[0]}} said "I need to {{ml.final.verbs[0]}}". "Well, that was   {{ml.final.adjectives[1]}}  " I thought to myself and walked in the store. The store had rearranged its inventory, so I felt    {{ml.final.adverbs[1]}}   lost. I   walked up to store clerk and said {{ml.final.adverbs[2]}}, "I am looking for a {{ml.final.adjectives[2]}} {{ml.final.nouns[1]}} that doesn’t {{ml.final.verbs[1]}} as often as the last one I had." The store clerk looked at me with a {{ml.final.adjectives[3]}} look in his eye and said, "What you are looking for can be found by the {{ml.final.nouns[2]}}, if you see a {{ml.final.nouns[3]}} that {{ml.final.adverbs[3]}} can {{ml.final.verbs[2]}}, then you've gone too far." As I tried to understand his directions, I thought to myself, "I should have just ordered it on Amazon. Their products seem to {{ml.final.verbs[3]}} the perfect amount."</p>
       <p ng-show="ml.selected === 'brainstorming' && ml.submitted">Many say that brainstorming is {{ml.final.adjectives[0]}} and does not {{ml.final.verbs[0]}}. However, with the combination of the right computer and {{ml.final.nouns[0]}} anyone  can lead a good    {{ml.final.verbs[1]}}  . When you have    {{ml.final.adverbs[0]}}   pulled together a   {{ml.final.adjectives[1]}}      group of   {{ml.final.nouns[1]}}   in a big room with lots of TV's then  magical things will happen. In the past we have {{ml.final.adverbs[1]}} suggested participants work together to find the most {{ml.final.adjectives[2]}} solution. The most difficult part is many {{ml.final.adjectives[3]}} {{ml.final.nouns[2]}} like to {{ml.final.verbs[2]}}. This has proved to be {{ml.final.adverbs[2]}} problematic. But in the end the most important {{ml.final.nouns[3]}} usually is brought to light.  Typically we try to encourage ideas to {{ml.final.verbs[3]}}, and never shut ideas  down. This concludes our instructions. Thanks for {{ml.final.adverbs[3]}} listening!</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
     <script type="text/javascript" src="scripts/controller.js"></script>
     <script type="text/javascript" src="scripts/defaultWords.js"></script>
-    <script type="text/javascript" src="scripts/directives.js"></script>
+    <script type="text/javascript" src="scripts/mlPressEnter.js"></script>
   </body>
 </html>
