Moved business logic to new factory

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       <p ng-show="ml.selected === 'brainstorming' && ml.submitted">Many say that brainstorming is {{ml.final.adjectives[0]}} and does not {{ml.final.verbs[0]}}. However, with the combination of the right computer and {{ml.final.nouns[0]}} anyone  can lead a good    {{ml.final.verbs[1]}}  . When you have    {{ml.final.adverbs[0]}}   pulled together a   {{ml.final.adjectives[1]}}      group of   {{ml.final.nouns[1]}}   in a big room with lots of TV's then  magical things will happen. In the past we have {{ml.final.adverbs[1]}} suggested participants work together to find the most {{ml.final.adjectives[2]}} solution. The most difficult part is many {{ml.final.adjectives[3]}} {{ml.final.nouns[2]}} like to {{ml.final.verbs[2]}}. This has proved to be {{ml.final.adverbs[2]}} problematic. But in the end the most important {{ml.final.nouns[3]}} usually is brought to light.  Typically we try to encourage ideas to {{ml.final.verbs[3]}}, and never shut ideas  down. This concludes our instructions. Thanks for {{ml.final.adverbs[3]}} listening!</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script type="text/javascript" src="scripts/app.js"></script>
-    <script type="text/javascript" src="scripts/controller.js"></script>
-    <script type="text/javascript" src="scripts/defaultWords.js"></script>
-    <script type="text/javascript" src="scripts/mlPressEnter.js"></script>
+    <script type="text/javascript" src="scripts/general/app.js"></script>
+    <script type="text/javascript" src="scripts/controllers/controller.js"></script>
+    <script type="text/javascript" src="scripts/services/defaultWords.js"></script>
+    <script type="text/javascript" src="scripts/services/spaceFiller.js"></script>
+    <script type="text/javascript" src="scripts/directives/mlPressEnter.js"></script>
   </body>
 </html>
